# python-web-hw03

bot_assistant/: pyproject.toml
bot_assistant/bot_assistant/: address_book_classes.py  address_book_main.py  notes_classes.py  notes_main.py  output_classes.py  sort_functions.py  sort_main.py
divisors/: divisors.py
